# easy_logger

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  auto_format_rules.h  logger.h  nostd_source_location.h
.cursor/rules/: cpp-projects.mdc
.github/workflows/: ci.yml
cmake/: easy_logger-config.cmake.in
examples/basic/: CMakeLists.txt  main.cpp
include/: auto_format_rules.h  easy_logger.h  logger.h
include/easy_logger/: logger.h  nostd_source_location.h
include/sinks/: daily_folder_sink.h
old_version/: README.md
old_version/src/: main.cpp
src/: main.cpp
tests/: CMakeLists.txt  logger_test.cpp
